refactor: GroupEmailFilterService extends EntityService